src/objects/DD_UserDemoPool__c.object
<CustomObject>
    <description>***Demo Depot application*** 
Junction object between user and demo pool.</description>
    <fields>
        <fullName>DD_Demo_Pool__c</fullName>
        <label>Demo Pool Name</label>
        <referenceTo>DD_Demo_Pool__c</referenceTo>
        <relationshipLabel>Demo Pool Users</relationshipLabel>
        <relationshipName>UserDemoPools</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_User__c</fullName>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserDemoPools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <label>ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_User_Demo_Pool__c</fullName>
        <label>Unique User - Demo Pool</label>
        <length>252</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Demo Pool Users</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DD_User__c</columns>
        <columns>DD_Demo_Pool__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Users_assigned_to_APAC_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_User__c</columns>
        <columns>DD_Demo_Pool__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Demo_Pool__c</field>
            <operation>startsWith</operation>
            <value>APAC</value>
        </filters>
        <label>Users assigned to APAC Demo Pool</label>
    </listViews>
    <listViews>
        <fullName>Users_assigned_to_EMEA_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_User__c</columns>
        <columns>DD_Demo_Pool__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Demo_Pool__c</field>
            <operation>startsWith</operation>
            <value>EMEA</value>
        </filters>
        <label>Users assigned to EMEA Demo Pool</label>
    </listViews>
    <listViews>
        <fullName>Users_assigned_to_LATAM_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_User__c</columns>
        <columns>DD_Demo_Pool__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Demo_Pool__c</field>
            <operation>startsWith</operation>
            <value>LATAM</value>
        </filters>
        <label>Users assigned to LATAM Demo Pool</label>
    </listViews>
    <nameField>
        <displayFormat>UDP-{0000}</displayFormat>
        <label>Demo Pool User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Pool Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>